[gd_scene load_steps=19 format=2]

[ext_resource path="res://IMAGES/BGFLOOR.png" type="Texture" id=1]
[ext_resource path="res://IMAGES/ALPHABET/E.png" type="Texture" id=2]
[ext_resource path="res://IMAGES/ALPHABET/A.png" type="Texture" id=3]
[ext_resource path="res://IMAGES/ALPHABET/O.png" type="Texture" id=4]
[ext_resource path="res://IMAGES/ALPHABET/T.png" type="Texture" id=5]
[ext_resource path="res://IMAGES/ALPHABET/N.png" type="Texture" id=6]
[ext_resource path="res://IMAGES/ALPHABET/B.png" type="Texture" id=7]
[ext_resource path="res://IMAGES/ALPHABET/U.png" type="Texture" id=8]
[ext_resource path="res://IMAGES/ALPHABET/C.png" type="Texture" id=9]
[ext_resource path="res://IMAGES/ALPHABET/L.png" type="Texture" id=10]
[ext_resource path="res://IMAGES/ALPHABET/K.png" type="Texture" id=11]
[ext_resource path="res://IMAGES/ALPHABET/S.png" type="Texture" id=12]
[ext_resource path="res://IMAGES/ALPHABET/R.png" type="Texture" id=13]
[ext_resource path="res://StartScrean.gd" type="Script" id=14]
[ext_resource path="res://IMAGES/BLACK.png" type="Texture" id=15]
[ext_resource path="res://IMAGES/ALPHABET/M.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 252, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72, 18 )

[node name="StartScrean" type="Node2D"]
script = ExtResource( 14 )

[node name="BLACK" type="Sprite" parent="."]
position = Vector2( 350, 390 )
scale = Vector2( 34.3125, 15.25 )
texture = ExtResource( 15 )

[node name="BGFLOOR" type="Sprite" parent="."]
position = Vector2( 300, 400 )
texture = ExtResource( 1 )

[node name="LOGO" type="Node2D" parent="."]
position = Vector2( 0, -102 )

[node name="UNSTABLE" type="Node2D" parent="LOGO"]
position = Vector2( 6, 210 )

[node name="U" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 36, 102 )
rotation = 1.5708
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 8 )

[node name="N" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 96, 102 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 6 )

[node name="S" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 156, 102 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 12 )

[node name="T" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 228, 108 )
rotation = 0.785398
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 5 )

[node name="A" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 300, 102 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 3 )

[node name="B" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 360, 102 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 7 )

[node name="L" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 420, 102 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 10 )

[node name="E" type="Sprite" parent="LOGO/UNSTABLE"]
position = Vector2( 480, 102 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 2 )

[node name="BLOCKS" type="Node2D" parent="LOGO"]
position = Vector2( 0, 210 )

[node name="B" type="Sprite" parent="LOGO/BLOCKS"]
position = Vector2( 318, 162 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 7 )

[node name="L" type="Sprite" parent="LOGO/BLOCKS"]
position = Vector2( 378, 162 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 10 )

[node name="O" type="Sprite" parent="LOGO/BLOCKS"]
position = Vector2( 438, 162 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 4 )

[node name="C" type="Sprite" parent="LOGO/BLOCKS"]
position = Vector2( 498, 162 )
rotation = -1.5708
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 9 )

[node name="K" type="Sprite" parent="LOGO/BLOCKS"]
position = Vector2( 558, 162 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 11 )

[node name="START" type="Area2D" parent="."]
position = Vector2( 0, 414 )

[node name="S" type="Sprite" parent="START"]
position = Vector2( 102, 180 )
scale = Vector2( 3, 3 )
texture = ExtResource( 12 )

[node name="T" type="Sprite" parent="START"]
position = Vector2( 204, 180 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="A" type="Sprite" parent="START"]
position = Vector2( 306, 180 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="R" type="Sprite" parent="START"]
position = Vector2( 408, 180 )
scale = Vector2( 3, 3 )
texture = ExtResource( 13 )

[node name="T2" type="Sprite" parent="START"]
position = Vector2( 510, 180 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="START"]
position = Vector2( 306, 180 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 300, 402 )
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="MUTE" type="Area2D" parent="."]
position = Vector2( 72, 0 )

[node name="M" type="Sprite" parent="MUTE"]
position = Vector2( 378, 54 )
texture = ExtResource( 16 )

[node name="U" type="Sprite" parent="MUTE"]
position = Vector2( 414, 54 )
texture = ExtResource( 8 )

[node name="T" type="Sprite" parent="MUTE"]
position = Vector2( 450, 54 )
texture = ExtResource( 5 )

[node name="E" type="Sprite" parent="MUTE"]
position = Vector2( 486, 54 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MUTE"]
position = Vector2( 432, 54 )
shape = SubResource( 2 )

[connection signal="input_event" from="START" to="." method="_on_START_input_event"]
[connection signal="mouse_entered" from="START" to="." method="_on_START_mouse_entered"]
[connection signal="mouse_exited" from="START" to="." method="_on_START_mouse_exited"]
[connection signal="input_event" from="MUTE" to="." method="_on_MUTE_input_event"]
[connection signal="mouse_entered" from="MUTE" to="." method="_on_MUTE_mouse_entered"]
[connection signal="mouse_exited" from="MUTE" to="." method="_on_MUTE_mouse_exited"]
